Outlook showcase sample latest changes were committed

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,5 @@
 //sass-lint:disable-all
-@import 'ej2-base/styles/definition/_fabric.scs';
+@import 'ej2-base/styles/definition/_fabric.scss';
 @import 'ej2-icons/styles/fabric.scss';
 @import 'ej2-base/styles/fabric-definition.scss';
 @import 'ej2-base/styles/all.scss';
